--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,8 @@
 .header{
 
-  font-family: ' Pacifico';
+  font-family: 'Pacifico', cursive;
+justify-content: center;
+font-size: 59px;
+text-align: center;
 
 }
