--- a/src/components/Shirt/shirt.css
+++ b/src/components/Shirt/shirt.css
@@ -1,9 +1,22 @@
 .shirt-card {
     width: 30%;
     border: 1px solid black;
+    background-color: white;
 }
 
 .shirt-card img {
+    width: 98%;
+    margin: 20px 1% 20px 1%;
+    border: 1px solid black;
+}
+
+.selected-shirt-card {
+  width: 30%;
+  border: 1px solid black;
+  background-color: green;
+}
+
+.selected-shirt-card img {
     width: 98%;
     margin: 20px 1% 20px 1%;
     border: 1px solid black;
