--- a/src/components/Shirt/shirt.css
+++ b/src/components/Shirt/shirt.css
@@ -1,25 +1,41 @@
 .shirt-card {
     width: 30%;
-    border: 1px solid black;
-    background-color: white;
+
+   background-color: #D7EDF7;
+   /* margin-right: 50px; */
+     border: 2px solid #1884C3;
 }
 
 
 
 .shirt-card img {
     width: 98%;
-    margin: 20px 1% 20px 1%;
-    border: 1px solid black;
+    margin: 4px 1% 20px 1%;
+    /* border: 5px solid #1884C3; */
 }
 
 .selected-shirt-card {
   width: 30%;
-  border: 1px solid black;
-  background-color: green;
+  border: 2px solid #1884C3;
+  background-color: #57A6D7;
 }
 
 .selected-shirt-card img {
-    width: 98%;
-    margin: 20px 1% 20px 1%;
-    border: 1px solid black;
+  width: 98%;
+  margin: 4px 1% 20px 1%;
+  /* border: 5px solid #1884C3; */
+}
+.paragraph{
+color: #1884C3;
+font-size: 25px;
+text-align:center;
+font-weight: bold;
+
+
+}
+.paragraph1{
+  color: red;
+  font-size: 25px;
+  text-align:center;
+  font-weight: bold;
 }
