--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,6 +1,7 @@
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  background-color: #D7EDF7;
 }
 th, td {
   padding: 15px;
